tests/errors/comprehensive/E3010_undefined_param_type.ez
/*
 * Error Test: E3010 - undefined-param-type
 * Expected: "undefined type"
 */

do process(data UnknownType) {  // Unknown parameter type
    std.println(data)
}

do main() {
    process("test")
}
